--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -654,12 +654,122 @@ trackByHeroes(index : number, hero : Hero){
 |ngOnDestory()            | 每当 Angular 每次销毁指令/组件之前调用并清扫。 在这儿反订阅可观察对象和分离事件处理器，以防内存泄漏。在 Angular 销毁指令/组件之前调用。|
 
 7. 事件发射器；
+
+    `EventEmitter`：用于指令和组件中同步或异步地发出自定义事件，并通过订阅实例为这些事件注册处理程序。
+    ```js
+        @Component({
+      selector: 'zippy',
+      template: `
+      <div class="zippy">
+        <div (click)="toggle()">Toggle</div>
+        <div [hidden]="!visible">
+          <ng-content></ng-content>
+        </div>
+     </div>`})
+    export class Zippy {
+      visible: boolean = true;
+      @Output() open: EventEmitter<any> = new EventEmitter();
+      @Output() close: EventEmitter<any> = new EventEmitter();
+     
+      toggle() {
+        this.visible = !this.visible;
+        if (this.visible) {
+          this.open.emit(null);
+        } else {
+          this.close.emit(null);
+        }
+      }
+    }
+    
+    <zippy (open)="onOpen($event)" (close)="onClose($event)"></zippy>
+    ```
+
 8. 延迟(懒)加载；
+
+    ```js
+    const routes: Routes = [
+      {
+        path: 'customers',
+        loadChildren: './customers/customers.module#CustomersModule'
+      },
+      {
+        path: 'orders',
+        loadChildren: './orders/orders.module#OrdersModule'
+      },
+      {
+        path: '',
+        redirectTo: '',
+        pathMatch: 'full'
+      }
+    ];
+    
+    import { NgModule } from '@angular/core';
+    import { CommonModule } from '@angular/common';
+    import { CustomersRoutingModule } from './customers-routing.module';
+    import { CustomerListComponent } from './customer-list/customer-list.component';
+
+    @NgModule({
+      imports: [
+        CommonModule,
+        CustomersRoutingModule
+      ],
+      declarations: [CustomerListComponent]
+    })
+    export class CustomersModule { }
+    ```
+
 9. 编译(AOT、JIT)；
 10. 模块；
 11. 动态组件；
 12. Observable与RxJS；
 13. 构建(底层webpack)；
+- dependencies：运行应用的基础；
+    1. Angularr的核心和可选模块：包名以`@angular/`开头；
+    2. 支持包：Angular应用运行时必须的第三方库：`rxjs`、`zone.js`；
+    3. 腻子脚本：负责抹平不同浏览器的js实现之间的差异：`core-js;`
+- decDependencies：只有在开发应用时才会用到;
+    |包名|说明|
+    |:---|:---|
+    |@angular‑devkit/build‑angular |Angular 构建工具。|
+    |@angular/cli 	|Angular CLI 工具。|
+    |@angular/compiler‑cli 	|Angular 编译器，Angular CLI 的 ng build 和 ng serve 命令会调用它。|
+    |@angular/language‑service 	|Angular 语言服务会分析组件模板并给出类型信息和错误信息，支持 TypeScript 的编辑器可以使用它来提升开发体验。具体的例子可参见 VS Code 的 Angular 语言服务扩展。|
+    |@types/... 	|第三方库（如 Jasmine、Node.js）的 TypeScript 类型定义文件。|
+    |codelyzer 	|Angular 应用的风格检查器（linter），它可以为满足 Angular 风格指南中的规则提供保障。|
+    |jasmine/... 	|用于支持 Jasmine 测试库的包。|
+    |karma/... 	|用于支持 karma 测试运行器的包。|
+    |protractor 	|一个针对 Angular 应用的端到端 (e2e) 测试框架。基于 WebDriverJS 构建。|
+    |ts-node 	|供 Node.js 使用的 TypeScript 运行环境和 REPL。|
+    |tslint 	|一个静态分析工具，它可以检查 TypeScript 代码的可读性、可维护性和功能性方面的错误。|
+    |typescript 	|TypeScript 语言的服务提供者，包括 TypeScript 编译器 tsc。|
+ - 底层webpack：
+    ```js
+        "webpack-dev-server": "~2.7.1",
+        "webpack": "~3.7.1",
+        "autoprefixer": "^6.5.3",
+        "css-loader": "^0.28.1",
+        "cssnano": "^3.10.0",
+        "exports-loader": "^0.6.3",
+        "file-loader": "^1.1.5",
+        "html-webpack-plugin": "^2.29.0",
+        "less-loader": "^4.0.5",
+        "postcss-loader": "^1.3.3",
+        "postcss-url": "^5.1.2",
+        "raw-loader": "^0.5.1",
+        "sass-loader": "^6.0.3",
+        "source-map-loader": "^0.2.0",
+        "istanbul-instrumenter-loader": "^2.0.0",
+        "style-loader": "^0.13.1",
+        "stylus-loader": "^3.0.1",
+        "url-loader": "^0.6.2",
+        "circular-dependency-plugin": "^3.0.0",
+        "webpack-concat-plugin": "1.4.0",
+        "copy-webpack-plugin": "^4.1.1"
+    ```
+    
+*拓展一、Webpack*
+
+
 14. 跨域；
 15. 双向数据绑定；
 16. TypeScript；
