--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -638,6 +638,14 @@ trackByHeroes(index : number, hero : Hero){
 [参考文档一](https://blog.csdn.net/zhao_tuo/article/details/79261083)、[参考文档二](https://stackoverflow.com/questions/44970386/how-is-angulars-ngfor-loop-implemented/44971440#44971440)
 4. 服务与依赖注入；
 5. 路由工作原理、路由守卫；
+
+    路由器可以支持多种守卫接口：
+        - 用CanActivate来处理导航到某路由的情况。
+        - 用CanActivateChild来处理导航到某子路由的情况。
+        - 用CanDeactivate来处理从当前路由离开的情况.
+        - 用Resolve在路由激活之前获取路由数据。
+        - 用CanLoad来处理异步导航到某特性模块的情况。
+
 6. 组件生命周期；
 
 生命周期的顺序：
