--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -730,6 +730,9 @@ trackByHeroes(index : number, hero : Hero){
 10. 模块；
 11. 动态组件；
 12. Observable与RxJS；
+
+    RxJS提供了一种异步事件分发机制，在angular中主要用于实现变更检测和事件传播。
+
 13. 构建(底层webpack)；
 - dependencies：运行应用的基础；
     1. Angularr的核心和可选模块：包名以`@angular/`开头；
