--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -322,6 +322,10 @@
 
 #### 3.XSS与CSRF（必考）
 
+    [十大常见web漏洞及防范](https://blog.csdn.net/weixin_41656968/article/details/81270071)
+    
+    [总结 XSS 与 CSRF 两种跨站攻击](https://www.cnblogs.com/wangyuyu/p/3388180.html)
+
 #### 4.学习经历和方法
 
 #### 5.性能优化
