--- a/docs/notes/JavaScript/JavaScript高级程序设计3/第10章.md
+++ b/docs/notes/JavaScript/JavaScript高级程序设计3/第10章.md
@@ -152,3 +152,13 @@ console.log(shallowList.childNodes.length);  //0
 
 ##### 3.查找元素
 
+- getElementById():接受一个参数：要取得的元素的ID。不存在这个元素则返回null；
+- getElementByTagName()：接受一个参数：要取得元素的标签名，返回的是包含零个或多个元素的NodeList。在HTML文档中，这个方法会返回一个HTMLCollection对象，作为一个“动态”集合，该对象与NodeList非常类似。
+    - HTMLCollection有一个方法：namedItem()。可以通过元素的name特性取得集合的项：
+    ```js
+    var images = document.getElementsByTagName("img");
+    <img src="myimage.gif" name="myImage">
+    var myImage = images.namedItem("myImage");
+    ```
+
+- getElementsByName()：返回带有给定name特性的所有元素。
