新增：前端面试准备

--- a/docs/notes/JavaScript/JavaScript高级程序设计3/第10章.md
+++ b/docs/notes/JavaScript/JavaScript高级程序设计3/第10章.md
@@ -162,3 +162,87 @@ console.log(shallowList.childNodes.length);  //0
     ```
 
 - getElementsByName()：返回带有给定name特性的所有元素。
+
+##### 4.特殊集合
+
+这些特殊的集合都是HTMLCollection对象，为访问文档常用的部分提供了快捷方式：
+- document.anchors：包含文档中所有带name特性的a元素；
+- document.applets：包含文档中所有的applet元素，不再建议使用；
+- document.forms：包含文档中所有的from元素，与document.getElementsByTagName('from')得到的结果相同；
+- document.images：包含文档中所有的img元素，与document.getElementsByTagName('img')得到的结果相同；
+- document.links：包含文档中所有带htef特性的a元素。
+
+这个特殊集合中的项会随着当前文档内容的更新而更新。
+
+##### 5.DOM一致性检测
+
+- document.implementation.hasFeature()：接受两个参数，要检测的DOM功能的名称及版本号。如果浏览器支持给定名称和版本的功能，则该方法返回true。
+
+##### 6.文档写入
+
+- document.write()：接受一个字符串参数，即要写入到输出流中的文本，会原样写入；
+- document.writeln()：接受一个字符串参数，即要写入到输出流中的文本，会在字符串的末尾添加一个换行符；
+
+可以使用这两个方法向页面中动态地加入内容；也可以动态的包含外部资源：
+```js
+document.write('<strong>' + (new Date()).toString() + '</strong>');
+document.write("<script type='text/javascript' src='file.js'></script>");//这里字符串</script>将被解释为与外部的<script>标签匹配，结果文本");将会出现在页面中。解决方案如下：
+document.write("<script type='text/javascript' src='file.js'><\/script>");
+```
+
+- document.open()：打开网页的输出流；
+- document.close()：关闭网页的输出流。
+
+#### 10.1.3 Element类型
+
+Element类型用于表现XML或HTML元素，提供了对元素标签名、子节点及特性的访问。Element节点具有一下特征：
+- nodeType的值为1；
+- nodeName的值为元素的标签名；
+- nodeValue的值为null；
+- parentNode可能是Document或Element；
+- 其子节点可能是Element、Text、Comment、ProcessingInstruction、CDATASection或EntityReference。
+
+要访问元素的标签名，可以使用nodeName属性，也可以使用tagName属性。div.tagName实际输出的是大写，在HTML中，标签名始终都以全部大写表示；而在XML中，标签名则始终会与源代码中保持一致。所以最好在比较之前将标签名转换为相同的大小写形式。
+
+##### 1.HTML元素
+
+所有HTML元素都由HTMLElement类型表示，HTMLElement类型直接继承自Element并添加了一些属性：
+- id：元素在文档中的唯一标识符；
+- title：有关元素的附加说明信息，一般通过同居提示条显示出来；
+- lang：元素内容的语言代码，很少使用；
+- dir：语言的方向，值为“ltr”或“rtl”，也很少使用；
+- className：与元素的class特性对应，即为元素指定的CSS类。
+
+##### 2.取得特性
+
+每个元素都有一或多个特性，这些特性的用途是给出相应元素或其内容的附加信息。`getAttribute()`。
+
+特性的名称是不区分大小写的，即ID和id代表的都是同一个特性。
+
+`style`特性通过getAttribute()访问时，返回的style特性值中包含的时CSS文本；`onclick`这样的事件处理程序，通过getAttribute()访问，则会返回相应的代码的字符串。而在访问onclick属性时，则会返回要给js函数（如果未在元素中指定相应的特性，则返回null）。
+
+操作DOM时一般只使用对象的属性，只有在取得自定义特性值得情况下，才使用getAttribute()方法。
+
+##### 3.设置特性
+
+`setAttribute()`接受两个参数：要设置得特性名和值。如果特性已存在，会以指定得值替换现有得值；如果特性不存在，则创建该属性并设置相应得值。
+
+通过这个方法设置得特性名会被统一转换为小写形式。
+
+因为所有特性都是属性，所以直接给属性赋值可以设置特性得值：
+```js
+div.id = 'someOtherId';
+//自定义得属性不会自动成为元素得特性
+div.mycolor = 'red';
+console.log(div.getAttribute('mycolor'));  //null（IE除外）
+```
+
+`removeAttribute()`用于彻底删除元素得特性。调用这个方法不仅会清除特性得值，而且也会从元素中完全删除特性。
+
+##### 4.attributes属性
+
+Element类型是使用attributes属性得唯一一个DOM节点类型。attributes属性中包含一个NamedNodeMap，与NodeList类似，也是一个“动态”得集合。拥有下列方法：
+- getNamedItem(name)：返回nodeName属性等于name得节点；
+- removeNamedItem(name)：从列表中移除nodeName属性等于name得节点；
+- setNamedItem(node)：向列表中添加节点，以节点得nodeName属性为索引；
+- item(pos)：返回位于数字pos位置处得节点。
