整理面试资料，以及一些概念

--- a/docs/resources/interview/1.面试前需要注意些什么/2.面试准备.md
+++ b/docs/resources/interview/1.面试前需要注意些什么/2.面试准备.md
@@ -14,7 +14,7 @@
 
 ##### 任职要求
 
-- HTMLE5最新规范、HTML5特性；---要求对新知识是有追求的，跟踪技术热点
+- HTML5最新规范、HTML5特性；---要求对新知识是有追求的，跟踪技术热点
 - js面向对象编程方法；
 - 理解web标准（ES6标准，必学）；
 - 可用性、可访问性---对性能的监控，对错误的监控：捕获js异常（运行时异常、资源加载错误）
