--- a/docs/resources/interview/1.面试前需要注意些什么/3.面试技巧.md
+++ b/docs/resources/interview/1.面试前需要注意些什么/3.面试技巧.md
@@ -74,3 +74,29 @@
 3. 逻辑顺畅；
 4. 上进有责任心；
 5. 有主张，做事果断
+
+#### 自己追问的问题
+
+1. 项目组如何定义我的职位，我接下来的职业发展是什么？
+
+    给我的规划是否有晋升空间。
+
+2. 项目的开发流程：从需求评审到发布上线，会经历哪些步骤？
+
+3. 你（问面试官/上级）为什么选择这家公司，他最吸引你的地方是什么？
+
+    2-3年后应该可以胜任我上司的职位，衡量他留在这里的考虑，也可以看清我以后的路。
+
+4. 公司的代码规范制定以及技术分享的频率和形式？
+
+    直接决定我的代码水平能否提高，以及如何分享是一门艺术。甚至带了职业生涯后期，沟通能力远大于技术实力。
+
+5. 对于加班这块公司的规定是什么？调休还是双倍工资？
+
+6. 接下来我要做的项目是什么？
+
+    能否长期在这个方向钻研。
+
+7. 公司对于我们团队的规划是什么？以后会扩充还是现在只是尝试性的团队？
+
+    职业晋升。
