--- a/docs/resources/interview/1.面试前需要注意些什么/概念.md
+++ b/docs/resources/interview/1.面试前需要注意些什么/概念.md
@@ -63,39 +63,64 @@
 7. es6，require.js，amd；
 8. [版本控制](https://www.cnblogs.com/allanli/p/git_commands.html)；
     - git init //初始化本地git环境
+    - git add . //把本地的修改加到stage中
+    - git commit -m 'comments here' //把stage中的修改提交到本地库
+    - --
+    - git status //查看当前分支有哪些修改
+    - git diff //查看当前没有add的内容
+    - --
+    - git log //查看当前分支上面的日志信息（显示从最近到最远的提交日志）
+    - git reset --hard HEAD //撤销本地修改
+    - git reflog  //查看命令历史，可以查看到每次提交的commit id，用来配合git reset --hard commit_id来返回到回退前的版本
+    - --
+    - git checkout master/branch //切换到某个分支
+    - --
+    - git rm file //从版本库中删除该文件。可以用 git checkout -- file 把误删的文件恢复到最新版本（只能恢复文件到最新版本，你会丢失最近一次提交后你修改的内容）。
+    
     - git clone XXX//克隆一份代码到本地仓库
     - git pull //把远程库的代码更新到工作台
     - git pull --rebase origin master //强制把远程库的代码跟新到当前分支上面
     - git fetch //把远程库的代码更新到本地库
         - 与git pull相比，git fetch相当于是从远程获取最新版本到本地，但不会自动merge。如果需要有选择的合并git fetch是更好的选择。效果相同时git pull将更为快捷。[参考资料](https://www.cnblogs.com/qiu-Ann/p/7902855.html)
-    - git add . //把本地的修改加到stage中
-    - git commit -m 'comments here' //把stage中的修改提交到本地库
     - git push //把本地库的修改提交到远程库中
         - `git push -u origin master`：把本地库的内容推送到远程，用git push命令，实际上是把当前分支master推送到远程。由于远程库是空的，我们第一次推送master分支时，加上了-u参数，Git不但会把本地的master分支内容推送的远程新的master分支，还会把本地的master分支和远程的master分支关联起来，在以后的推送或者拉取时就可以简化命令。
         - git push origin master：把本地master分支的最新修改推送至GitHub，现在，你就拥有了真正的分布式版本库！
     - git branch -r/-a //查看远程分支/全部分支
-    - git checkout master/branch //切换到某个分支
-    - git checkout -b test //新建test分支
-    - git checkout -d test //删除test分支
     - git merge master //假设当前在test分支上面，把master分支上的修改同步到test分支上
     - git merge tool //调用merge工具
     - git stash //把未完成的修改缓存到栈容器中
     - git stash list //查看所有的缓存
     - git stash pop //恢复本地分支到缓存状态
     - git blame someFile //查看某个文件的每一行的修改记录（）谁在什么时候修改的）
-    - git status //查看当前分支有哪些修改
-    - git log //查看当前分支上面的日志信息
-    - git diff //查看当前没有add的内容
-    - git diff --cache //查看已经add但是没有commit的内容
-    - git diff HEAD //上面两个内容的合并
-    - git reset --hard HEAD //撤销本地修改
     - echo $HOME //查看git config的HOME路径
     - export $HOME=/c/gitconfig //配置git config的HOME路径
     - git config user.name [AAA]
     - git config user.email [邮箱地址]
     - git config --globaluser.name [AAA]
     - git config --global user.email [邮箱地址]
+    - ---
     - [廖雪峰-Git](https://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000/0013743256916071d599b3aed534aaab22a0db6c4e07fd0000)
+    - git add 的具体使用：
+        - git add -A  提交所有变化
+        - git add -u  提交被修改(modified)和被删除(deleted)文件，不包括新文件(new)
+        - git add .  提交新文件(new)和被修改(modified)文件，不包括被删除(deleted)文件
+    - git diff的具体使用：
+        - git diff readme.txt //查看对readme.txt作了什么修改
+        - git diff --cache //查看已经add但是没有commit的内容
+        - git diff HEAD //上面两个内容的合并
+    - git reset --hard HEAD的具体使用：
+        - HEAD 表示当前版本；
+        - HEAD^ 表示上一个版本；
+        - HEAD^^ 表示上上一个版本；
+        - HEAD~100 表示上100个版本；
+        - git reset --hard 1094a //返回回退前commit id是1094adb...的版本
+        - git reset HEAD file //把暂存区的修改撤销掉（unstage），重新放回工作区
+        - git reset命令既可以回退版本，也可以把暂存区的修改回退到工作区。当我们用HEAD时，表示最新的版本。
+    - git checkout的具体使用：
+        - git checkout -- file //文件在工作区的修改全部撤销：让这个文件回到最近一次git commit或git add时的状态。
+        - git checkout -b test //新建test分支
+        - git checkout -d test //删除test分支
+    
 
 9. HTTP协议、https、http2；
 10. webpack；
