--- a/docs/resources/interview/1.面试前需要注意些什么/概念.md
+++ b/docs/resources/interview/1.面试前需要注意些什么/概念.md
@@ -62,42 +62,73 @@
 6. css3动画，及css3相关；
 7. es6，require.js，amd；
 8. [版本控制](https://www.cnblogs.com/allanli/p/git_commands.html)；
+    - `安装Git`
+    - git config user.name [AAA]
+    - git config user.email [邮箱地址]
+    - git config --global user.name "Your Name"
+    - git config --global user.email "email@example.com"
+    - `创建版本库`
     - git init //初始化本地git环境
     - git add . //把本地的修改加到stage中
     - git commit -m 'comments here' //把stage中的修改提交到本地库
-    - --
+    - `查看修改`
     - git status //查看当前分支有哪些修改
     - git diff //查看当前没有add的内容
-    - --
+    - `版本回退`
     - git log //查看当前分支上面的日志信息（显示从最近到最远的提交日志）
     - git reset --hard HEAD //撤销本地修改
     - git reflog  //查看命令历史，可以查看到每次提交的commit id，用来配合git reset --hard commit_id来返回到回退前的版本
-    - --
-    - git checkout master/branch //切换到某个分支
-    - --
+    - `撤销修改`
+    - git checkout -- file  //可以丢弃工作区的修改
+    - `删除文件`
     - git rm file //从版本库中删除该文件。可以用 git checkout -- file 把误删的文件恢复到最新版本（只能恢复文件到最新版本，你会丢失最近一次提交后你修改的内容）。
-    
+    - `添加远程库`
+    - git remote add origin git@github.com:账号/learngit.it  //关联一个远程库(远程库的名字就是origin)
+    - git push -u origin master  //第一次推送master分支的所有内容
+    - `从远程库克隆`
     - git clone XXX//克隆一份代码到本地仓库
-    - git pull //把远程库的代码更新到工作台
-    - git pull --rebase origin master //强制把远程库的代码跟新到当前分支上面
-    - git fetch //把远程库的代码更新到本地库
-        - 与git pull相比，git fetch相当于是从远程获取最新版本到本地，但不会自动merge。如果需要有选择的合并git fetch是更好的选择。效果相同时git pull将更为快捷。[参考资料](https://www.cnblogs.com/qiu-Ann/p/7902855.html)
-    - git push //把本地库的修改提交到远程库中
-        - `git push -u origin master`：把本地库的内容推送到远程，用git push命令，实际上是把当前分支master推送到远程。由于远程库是空的，我们第一次推送master分支时，加上了-u参数，Git不但会把本地的master分支内容推送的远程新的master分支，还会把本地的master分支和远程的master分支关联起来，在以后的推送或者拉取时就可以简化命令。
-        - git push origin master：把本地master分支的最新修改推送至GitHub，现在，你就拥有了真正的分布式版本库！
-    - git branch -r/-a //查看远程分支/全部分支
-    - git merge master //假设当前在test分支上面，把master分支上的修改同步到test分支上
-    - git merge tool //调用merge工具
-    - git stash //把未完成的修改缓存到栈容器中
+    - `创建与合并分支`
+    - git checkout -b dev //创建+切换分支。git checkout命令加上-b参数表示创建并切换
+    - git branch name // 创建分支
+    - git branch //查看分支
+    - git checkout name //切换分支
+    - git merge name //合并某分支到当前分支
+    - git branch -d name //删除分支
+    - `解决冲突`
+    - git log --graph --pretty=oneline --abbrev-commit  //查看分支的合并情况
+    - `Bug分支`
+    - git stash //可以把当前工作现场“储藏”起来，等以后恢复现场后继续工作
     - git stash list //查看所有的缓存
-    - git stash pop //恢复本地分支到缓存状态
+    - git stash pop //恢复本地分支到缓存状态，同时把stash内容删除
+    - `功能分支`
+    - git branch -D name  //分支还没有被合并，如果删除，将丢失掉修改，如果要强行删除，需要使用大写的-D参数
+    - `多人协作`
+    - git remote  //查看远程库的信息（当你从远程仓库克隆时，实际上Git自动把本地的master分支和远程的master分支对应起来了，并且，远程仓库的默认名称是origin）
+    - git remote -v  //显示更详细的信息
+    - git push origin branch-name  //推送分支，就是把该分支上的所有本地提交推送到远程库。推送时，要指定本地分支，这样，Git就会把该分支推送到远程库对应的远程分支上
+    - git checkout -b branch-name origin/branch-name  //在本地创建和远程分支对应的分支
+    - git pull  //把远程库的代码更新到工作台
+    - git branch --set-upstream-to branch-name origin/branch-name //创建本地分支和远程分支的链接关系
+    - `Rebase`
+    - git rebase  //可以把本地未push的分叉提交历史整理成直线；
+    - `创建标签`
+    - git tag name //可以在需要打标签的分支上打一个新标签
+    - git tag name commit_id //对提交过的commit打分支
+    - git tag  //查看标签
+    - git tag -a name -m "version 0.1 released" commit_id //创建带有说明的标签，用-a指定标签名，-m指定说明文字：
+    - git show tagname  //查看标签信息（标签不是按时间顺序列出，而是按字母排序的）
+    - `操作标签`
+    - git push origin tagname  //推送某个标签到远程（创建的标签都只存储在本地，不会自动推送到远程）
+    - git push origin --tags //一次性推送全部尚未推送到远程的本地标签
+    - git tag -d v0.1 //删除标签
+    - git push origin :refs/tags/v0.9  //从远程删除
+    - `自定义Git`
+    - git config --global color.ui true  //让Git显示颜色，会让命令输出看起来更醒目
+    - .gitignore文件  //把要忽略的文件名填进去，Git就会自动忽略这些文件。
+    - `额外`
     - git blame someFile //查看某个文件的每一行的修改记录（）谁在什么时候修改的）
     - echo $HOME //查看git config的HOME路径
     - export $HOME=/c/gitconfig //配置git config的HOME路径
-    - git config user.name [AAA]
-    - git config user.email [邮箱地址]
-    - git config --globaluser.name [AAA]
-    - git config --global user.email [邮箱地址]
     - ---
     - [廖雪峰-Git](https://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000/0013743256916071d599b3aed534aaab22a0db6c4e07fd0000)
     - git add 的具体使用：
@@ -109,7 +140,7 @@
         - git diff --cache //查看已经add但是没有commit的内容
         - git diff HEAD //上面两个内容的合并
     - git reset --hard HEAD的具体使用：
-        - HEAD 表示当前版本；
+        - HEAD 表示当前版本（指向当前分支）；
         - HEAD^ 表示上一个版本；
         - HEAD^^ 表示上上一个版本；
         - HEAD~100 表示上100个版本；
@@ -117,10 +148,31 @@
         - git reset HEAD file //把暂存区的修改撤销掉（unstage），重新放回工作区
         - git reset命令既可以回退版本，也可以把暂存区的修改回退到工作区。当我们用HEAD时，表示最新的版本。
     - git checkout的具体使用：
+        - git checkout master/branch //切换到某个分支
         - git checkout -- file //文件在工作区的修改全部撤销：让这个文件回到最近一次git commit或git add时的状态。
         - git checkout -b test //新建test分支
         - git checkout -d test //删除test分支
-    
+    - git push的具体使用： //把本地库的修改提交到远程库中
+        - `git push -u origin master`：把本地库的内容推送到远程，用git push命令，实际上是把当前分支master推送到远程。由于远程库是空的，我们第一次推送master分支时，加上了-u参数，Git不但会把本地的master分支内容推送的远程新的master分支，还会把本地的master分支和远程的master分支关联起来，在以后的推送或者拉取时就可以简化命令。
+        - git push origin master：把本地master分支的最新修改推送至GitHub，现在，你就拥有了真正的分布式版本库！
+    - git branch的具体使用：
+        - git branch //查看当前分支
+        - git branch dev //创建分支
+        - git branch -r/-a //查看远程分支/全部分支
+    - git stash的具体使用：
+        - git stash  //把未完成的修改缓存到栈容器中
+        - git stash list //查看所有的缓存
+        - git stash pop //恢复本地分支到缓存状态，同时把stash内容删除
+        - git stash apply  //恢复本地分支到缓存状态，但是恢复后，stash内容并不删除
+        - git stash drop  //删除本地分支的缓存状态
+    - git pull的具体使用：
+        - git pull --rebase origin name //强制把远程库的代码跟新到当前分支上面
+        - git fetch相当于是从远程获取最新版本到本地，但不会自动merge。如果需要有选择的合并git fetch是更好的选择。效果相同时git pull将更为快捷。[参考资料](https://www.cnblogs.com/qiu-Ann/p/7902855.html)
+    - git remote的具体使用：
+        - git remote  //查看远程库的信息
+        - git remote -v  //显示更详细的信息
+        - git remote add origin git@gitee.com:liaoxuefeng/learngit.git  //关联远程库
+        - git remote rm origin //删除已有的Github远程库
 
 9. HTTP协议、https、http2；
 10. webpack；
