--- a/docs/resources/interview/1.面试前需要注意些什么/概念.md
+++ b/docs/resources/interview/1.面试前需要注意些什么/概念.md
@@ -57,6 +57,9 @@
 
 
 3. HTML语义化；
+
+    [理解HTML语义化](https://www.cnblogs.com/fliu/articles/5244866.html)
+
 4. js面向对象编程方法；
 5. css3常用属性；
 6. css3动画，及css3相关；
