--- a/docs/resources/interview/1.面试前需要注意些什么/概念.md
+++ b/docs/resources/interview/1.面试前需要注意些什么/概念.md
@@ -182,6 +182,11 @@
 11. sass；
 12. typescript；
 13. state；
+
+    [Redux入门教程（快速上手）](https://segmentfault.com/a/1190000011474522)
+    
+    [redux原来如此简单](https://segmentfault.com/a/1190000016311891)
+
 14. rxjs；
 15. canvas；
 16. 数据mock；
