--- a/docs/resources/面试题目/常见面试题.md
+++ b/docs/resources/面试题目/常见面试题.md
@@ -153,6 +153,28 @@
 
 #### 1.原型、原型链、闭包
 
+- 闭包
+    1. 当函数可以记住并访问所在的词法作用域时，就产生了闭包，即使函数是在当前词法作用域之外执行；
+    2. 一个函数在定义时的词法作用域之外的地方被调用，这个函数仍然持有对该作用域的引用，这个引用就叫做闭包；
+    3. 无论通过何种手段将内部函数传递到所在的词法作用域以外，它都会持有对原始定义作用域的引用，无论在何处执行这个函数都会使用闭包；
+    4. 在定时器、事件监听器、Ajax请求、跨窗口通信、Web Workers或者任何其他的异步（或同步）任务中，只要使用了回调函数，实际上就是在使用闭包。
+    ```js
+    function wait(message) {
+        setTimeout( function timer() {
+            console.log( message );
+        }, 1000 );
+    } 
+    wait( "Hello, closure!" );
+    //内置的工具函数 setTimeout(..) 持有对一个参数的引用， 这个参数也许叫作 fn 或者 func， 或者其他类似的名字。 引擎会调用这个函数， 在例子中就是内部的 timer 函数， 而词法作用域在这个过程中保持完整。这就是闭包。
+    function setupBot(name, selector) {
+        $( selector ).click( function activator() {
+            console.log( "Activating: " + name );
+        } );
+    } 
+    setupBot( "Closure Bot 1", "#bot_1" );
+    setupBot( "Closure Bot 2", "#bot_2" );
+    ```
+
 #### 2.声明提升
 
 #### 3.基本数据类型
