--- a/docs/resources/面试题目/常见面试题.md
+++ b/docs/resources/面试题目/常见面试题.md
@@ -177,6 +177,31 @@
 
 #### 2.声明提升
 
+我们习惯将 var a = 2; 看作一个声明， 而实际上 JavaScript 引擎并不这么认为。 它将 var a和 a = 2 当作两个单独的声明， 第一个是编译阶段的任务， 而第二个则是执行阶段的任务。
+
+这意味着无论作用域中的声明出现在什么地方， 都将在代码本身被执行前首先进行处理。可以将这个过程形象地想象成所有的声明（ 变量和函数） 都会被“ 移动” 到各自作用域的最顶端， 这个过程被称为提升。
+
+- 函数会首先被提升， 然后才是变量
+```js
+foo();
+var foo;
+function foo() {
+    console.log( 1 );
+} 
+foo = function() {
+    console.log( 2 );
+}
+//等同于
+function foo() {
+    console.log( 1 );
+} 
+foo(); // 1
+foo = function() {
+    console.log( 2 );
+};
+//重复的var声明会被忽略。出现在后面的函数声明可以覆盖前面的声明
+```
+
 #### 3.基本数据类型
 
 #### 4.高阶函数
